// go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
// protoc --go_out=. internal/store/codegraph/definition.proto
syntax = "proto3";

package codegraphpb;
option go_package = "internal/store/codegraph/codegraphpb;codegraphpb";

// 代码文件结构
message CodeDefinition {
  string path = 1;                   // 文件相对路径
  string language = 2;               // 编程语言
  repeated Definition definitions = 3; // 定义列表
}


// 代码定义
message Definition {
  string type = 1;          // 定义类型
  string name = 2;                  // 名称
  repeated int32 range = 3;         // [startLine, startColumn, endLine, endColumn] (0-based)
  string signature = 4;             // 签名
  bytes content =5;
}