// go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
// protoc --go_out=. internal/store/codegraph/keys.proto
syntax = "proto3";

package codegraphpb;
option go_package = "internal/store/codegraph/codegraphpb;codegraphpb";

// key集合
message KeySet {
  repeated KeyRange keys = 1; // key列表
}

message KeyRange {
  bytes docKey = 1;
  repeated int32 range = 2;
}